
                     ngIRCd - Next Generation IRC Server

                       (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngircd 0.8.x (CVS)

  - Fixed a possible buffer underrun when reading the MOTD file. Thanks
    to Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Fixed detection of IRC lines which are too long to send. Detected by
    Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Fixed return values of our own implementation of strlcpy(). The code has
    been taken from rsync and they fixed it, but we didn't until today :-/
    It has only been used when the system didn't implement strlcpy by itself,
    not on "modern" systems. Florian Westphal, <westphal@foo.fh-furtwangen.de>.

ngircd 0.8.1 (2004-12-25)

  - Autoconf: Updated config.guess and config.sub
  - Added some more debug code ...
  - Fixed wrong variable names in output of "ngircd --configtest".
  - Debian: Fxied the name of the "default file" in the init script for
    ngircd-full packages. And do the test if the binary is executable after
    reading this file.
  - Enhanced the "test suite": please have a look at src/testsuite/README!

ngircd 0.8.0 (2004-06-26)

  - Fixed wrong buffer size calculation for results of the resolver.

  ngircd 0.8.0-pre2 (2004-05-16)
  - Enhanced logging to console when running in "no-detached mode": added
    PID and log messages of resolver sub-processes.
  - Fixed host name lookups when using IDENT user lookups.
  - "make clean" and "make maintainer-clean" remove more files mow.

  ngIRCd 0.8.0-pre1 (2004-05-07)
  - Two new configuration options: "ChrootDir" and "MotdPhrase", thanks to
    Benjamin Pineau <ben@zouh.org>. Now you can force the daemon to change