@@ -12,6 +12,8 @@
 
 ngircd 0.8.x (CVS)
 
+  - Fixed a buffer overflow that could cause the daemon to crash. Bug found
+    by Florian Westphal, <westphal@foo.fh-furtwangen.de>.
   - Fixed a possible buffer underrun when reading the MOTD file. Thanks
     to Florian Westphal, <westphal@foo.fh-furtwangen.de>.
   - Fixed detection of IRC lines which are too long to send. Detected by
@@ -551,4 +553,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.233.2.14 2005/01/24 14:22:30 alex Exp $
+$Id: ChangeLog,v 1.233.2.15 2005/01/26 13:27:01 alex Exp $
